--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -17,21 +17,23 @@
                 <p><strong>Email:</strong> {{user.email}}</p>
                 <p><strong>First Name:</strong> {{user.firstName}}</p>
                 <p><strong>Last Name:</strong> {{user.lastName}}</p>
-                <p><strong>Age:</strong> {{user.age}}</p>
+                <p><strong>Date of Birth:</strong> {{user.dateOfBirth}}</p>
+                <p><strong>Government ID (GID):</strong> {{user.gid}}</p>
                 <p><strong>Cart ID:</strong> {{user.cartId}}</p>
                 <p><strong>Role:</strong> {{user.role}}</p>
             </div>
 
-            <div class="grid-container-3c-by-1r">
-                <div></div>
-                <div class="">
-                    <a href="/logout" class="navbar-item is-warning make-it-normal button">Logout</a>
-                </div>
+            <div class="rt-general-page-footer grid-container-3c-by-1r-special">
                 <div class="">
                     {{#if (eq user.role "admin")}}
                         <a href="/admin" class="navbar-item make-it-normal button">Admin Panel</a>
                     {{/if}}
                 </div>
+                <div></div>
+                <div class="">
+                    <a href="/logout" class="navbar-item is-danger make-it-normal button">Logout</a>
+                </div>
+
             </div>
         </div>
     </section>
