--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -44,6 +44,20 @@
                 </div>
 
                 <div class="field">
+                    <label class="make-it-normal">Date of Birth</label>
+                    <div class="control">
+                        <input class="input" type="date" name="dateOfBirth" required>
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label class="make-it-normal">Government ID (GID)</label>
+                    <div class="control">
+                        <input class="input" type="text" name="gid" required>
+                    </div>
+                </div>
+
+                <div class="field">
                     <label class="make-it-normal">Password</label>
                     <div class="control">
                         <input id="password" class="input" type="password" name="password" required>
@@ -58,14 +72,7 @@
                     </div>
                     <p id="confirmPasswordHelp" class="help make-it-normal"></p>
                 </div>
-
-                <div class="field">
-                    <label class="make-it-normal">Age</label>
-                    <div class="control">
-                        <input class="input" type="number" name="age" required min="0">
-                    </div>
-                </div>
-
+                <br>
                 <div class="field is-grouped">
                     <div class="control">
                         <button id="submitBtn" class="button is-success make-it-normal" type="submit">Register</button>
@@ -144,11 +151,7 @@
                 confirmPasswordHelp.className = "help is-danger make-it-normal";
             }
 
-            if (passwordErrors.length === 0 && confirmPassword === password) {
-                submitBtn.disabled = false;
-            } else {
-                submitBtn.disabled = true;
-            }
+            submitBtn.disabled = !(passwordErrors.length === 0 && confirmPassword === password);
         }
 
         passwordInput.addEventListener("input", validateForm);
