Cosmetic stuff with cart counter and paging controls in admin views. Also fixed the button disposition of the admin panels.

--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -14,7 +14,7 @@
         <div class="section columns is-multiline is-centered">
             <!-- Add Product -->
             <div class="column is-3 section">
-                <a href="/forms/add-product" class="button make-it-rounded make-it-20-wide">
+                <a href="/forms/add-product" class="button make-it-rounded make-it-100percent-wide">
                     <span class="icon is-small"><i class="fas fa-plus fa-1x"></i></span>
                     <p class="section make-it-small make-it-normal">Add Product</p>
                 </a>
@@ -22,7 +22,7 @@
 
             <!-- Delete Product -->
             <div class="column is-3 section">
-                <a href="/forms/delete-product" class="button make-it-rounded make-it-20-wide">
+                <a href="/forms/delete-product" class="button make-it-rounded make-it-100percent-wide">
                     <span class="icon is-small"><i class="fas fa-trash-alt fa-1x"></i></span>
                     <p class="section make-it-small make-it-normal">Delete Product</p>
                 </a>
@@ -30,7 +30,7 @@
 
             <!-- Real-Time Products -->
             <div class="column is-3 section">
-                <a href="/realtime/products" class="button make-it-rounded make-it-20-wide">
+                <a href="/realtime/products" class="button make-it-rounded make-it-100percent-wide">
                     <span class="icon is-small"><i class="fas fa-boxes fa-1x"></i></span>
                     <p class="section make-it-small make-it-normal">Real-Time Products</p>
                 </a>
@@ -38,7 +38,7 @@
 
             <!-- Real-Time Carts -->
             <div class="column is-3 section">
-                <a href="/realtime/carts" class="button make-it-rounded make-it-20-wide">
+                <a href="/realtime/carts" class="button make-it-rounded make-it-100percent-wide">
                     <span class="icon is-small"><i class="fas fa-shopping-cart fa-1x"></i></span>
                     <p class="section make-it-small make-it-normal">Real-Time Carts</p>
                 </a>
@@ -46,7 +46,7 @@
 
             <!-- All Carts View -->
             <div class="column is-3 section">
-                <a href="/carts" class="button make-it-rounded make-it-20-wide">
+                <a href="/carts" class="button make-it-rounded make-it-100percent-wide">
                     <span class="icon is-small"><i class="fas fa-clipboard-list fa-1x"></i></span>
                     <p class="section make-it-small make-it-normal">All Carts</p>
                 </a>
@@ -54,7 +54,7 @@
 
             <!-- Ticket List View (NEW) -->
             <div class="column is-3 section">
-                <a href="/tickets" class="button make-it-rounded make-it-20-wide">
+                <a href="/tickets" class="button make-it-rounded make-it-100percent-wide">
                     <span class="icon is-small"><i class="fas fa-receipt fa-1x"></i></span>
                     <p class="section make-it-small make-it-normal">All Tickets</p>
                 </a>
