--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -110,14 +110,13 @@ body {
 }
 
 .cart-count {
-  background-color: rgba(97, 110, 124, .999);
-  color: #fff;
+  color: #000000;
   border-radius: 20%;
   padding: .1rem .5rem;
   font-size: .8rem;
   position: absolute;
-  top: -1.1rem;
-  right: -1.1rem
+  top: 0.4rem;
+  left: 0.0rem
 }
 
 .item-counter,
