--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -105,12 +105,11 @@ body {
   padding: 0;
   margin: 0;
   border: solid;
-  border-width: 0 1px 0 0;
-  border-color: #7e8073 !important;
+  border-width: 0 0px 0 0;
+  border-color: #7e8073 !important
 }
 
 .cart-count {
-  color: #000000;
   border-radius: 10%;
   padding: .2rem .5rem;
   position: relative;
@@ -123,6 +122,20 @@ body {
   align-items: center;
   padding: .9rem .1rem 1rem
 }
+
+.make-it-square-image {
+  width: 30rem; 
+  height: 100%; 
+  object-fit: cover;
+  object-position: 25% 25%; 
+  }
+
+.make-it-single-image {
+  width: 90%; 
+  height: 90%; 
+  object-fit: cover;
+  object-position: 25% 25%; 
+  }
 
 .item-counter {
   gap: .6rem;
