--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -22,36 +22,40 @@
         <div class="grid-container-3c-by-1r-special make-it-rounded small-section make-it-small">
             <div></div>
             <div class="grid-container-3c-by-1r-special">
-                <a class="navbar-item make-it-rounded make-it-dark make-it-8-wide" href="/products">
-                    <span><i class="fas fa-box-open small-section"></i>Products</span>
+                <a class="navbar-item  make-it-dark grid-container-2c-by-1r" href="/products">
+                    <i class="fas fa-box-open small-section"></i>
+                    <span>Products</span>
                 </a>
 
                 {{#if user}}
                     <div>
-                        <a class="navbar-item make-it-rounded make-it-dark make-it-8-wide" href="/current/">
-                            <span><i class="fas fa-user small-section"></i>{{user.username}}</span>
+                        <a class="navbar-item  make-it-dark make-it-8-wide grid-container-2c-by-1r" href="/current/">
+                            <i class="fas fa-user small-section"></i>
+                            <span>{{user.username}}</span>
                         </a>
                     </div>
                 {{else}}
                     <div>
-                        <a class="navbar-item make-it-rounded make-it-dark make-it-7-wide" href="/login/">
-                            <span><i class="fas fa-key small-section"></i>Log in</span>
+                        <a class="navbar-item  make-it-dark make-it-7-wide grid-container-2c-by-1r" href="/login/">
+                            <i class="fas fa-key small-section"></i>
+                            <span>Log in</span>
                         </a>
                     </div>
                 {{/if}}
 
-                <div class="navbar-item make-it-rounded make-it-dark make-it-7-wide cart-container" id="cart-link-container">
+                <div>
                     {{#if user}}
-                        <a href="/carts/{{user.cartId}}" id="cart-link">
-                            <span><span id="cart-count" class="cart-count make-it-dark-back make-it-small make-it-white">0</span> Cart</span>
+                        <a href="/carts/{{user.cartId}}" class="navbar-item  make-it-dark make-it-7-wide grid-container-2c-by-1r" id="cart-link">
+                            <span id="cart-count" class="cart-count make-it-dark-back make-it-small make-it-white">0</span>
+                            <span> Cart</span>
                         </a>
                     {{else}}
-                        <a href="/guest-cart" id="cart-link">
-                            <span><span id="cart-count" class="cart-count make-it-light-back">0</span> Cart</span>
+                        <a href="/guest-cart" class="navbar-item make-it-dark make-it-7-wide grid-container-2c-by-1r" id="cart-link">
+                            <span id="cart-count" class="cart-count make-it-dark-back make-it-small make-it-white">0</span>
+                            <span> Cart</span>
                         </a>
                     {{/if}}
                 </div>
-
             </div>
         </div>
     </header>
@@ -60,7 +64,7 @@
         {{{body}}}
     </main>
 
-    <footer class="content section make-it-semi make-it-small">
+    <footer class="content section make-it-semi make-it-small make-it-right">
         <p>&copy; 2025 Shopnhour</p>
     </footer>
 
