--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -22,15 +22,17 @@
                     {{#if (eq currentPage 1)}}disabled{{/if}}>Prev
                 </a>
             </div>
-
-            <a class="navbar-item make-it-rounded make-it-small" 
-                href="?page={{nextPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}" 
-                {{#if (eq currentPage totalPages)}}disabled{{/if}}>Next
-            </a>
-
-            <div class="make-it-dark small-section make-it-small">
+            <div class="make-it-dark small-section make-it-small make-it-center">
                 Page {{currentPage}} of {{totalPages}}
             </div>
+            <div class="make-it-center make-it-100percent-wide">
+                <a class="navbar-item make-it-rounded make-it-small" 
+                    href="?page={{nextPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}" 
+                    {{#if (eq currentPage totalPages)}}disabled{{/if}}>Next
+                </a>
+            </div>
+
+
         </div>
     </section>
 
@@ -43,13 +45,17 @@
                             <div class="card-title-container make-it-dark-back make-it-left make-it-white">
                                 <div>{{this.title}}</div>
                             </div>
-                            <div class="make-it-semi-back">
+                            <div class="make-it-semi-back make-it-center">
                                 <div class="small-section">
-                                    <a href="/products/{{this.pid}}">
-                                        <img src="{{this.imageURL}}" alt="{{this.title}}">
-                                    </a>
-                                    <div class="card-category-badge-prebuilt make-it-left">{{this.category}}</div>
+                                    <div class="card-category-badge-prebuilt make-it-left">
+                                        {{this.category}}
+                                    </div>
                                     <br>
+                                    <a href="/products/{{this.pid}}" class="make-it-center">
+                                        <img class="small-section make-it-square-image" src="{{this.imageURL}}" alt="{{this.title}}">
+                                    </a>
+                                    
+
                                     <div class="columns make-it-white-back make-it-dark make-it-small small-section">
                                         <div class="column is-6 make-it-left">
                                             <p><b>Price:</b> ${{this.price}}</p>
